--- a/src/Components/Home/Shared/Navbar/Navbar.css
+++ b/src/Components/Home/Shared/Navbar/Navbar.css
@@ -48,3 +48,18 @@
   .justifyConter {
     justify-content: center;
   }
+
+  .toggle {
+    position: fixed;
+    top: 20px;
+    right: 25px;
+    background: #000;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    display: none;
+  }
